@@ -25,42 +25,64 @@
 package co.elastic.apm.agent.bci;
 
 import co.elastic.apm.agent.MockTracer;
+import co.elastic.apm.agent.bci.bytebuddy.postprocessor.AssignTo;
+import co.elastic.apm.agent.bci.subpackage.AdviceInSubpackageInstrumentation;
 import co.elastic.apm.agent.configuration.CoreConfiguration;
 import co.elastic.apm.agent.configuration.SpyConfiguration;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
 import co.elastic.apm.agent.impl.ElasticApmTracerBuilder;
+import co.elastic.apm.agent.impl.transaction.AbstractSpan;
+import co.elastic.apm.agent.impl.transaction.Span;
 import co.elastic.apm.agent.matcher.WildcardMatcher;
+import co.elastic.apm.agent.util.GlobalVariables;
 import net.bytebuddy.agent.ByteBuddyAgent;
 import net.bytebuddy.asm.Advice;
 import net.bytebuddy.description.method.MethodDescription;
 import net.bytebuddy.description.type.TypeDescription;
+import net.bytebuddy.dynamic.ClassFileLocator;
+import net.bytebuddy.dynamic.loading.ByteArrayClassLoader;
 import net.bytebuddy.matcher.ElementMatcher;
 import net.bytebuddy.matcher.ElementMatchers;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.math.util.MathUtils;
+import org.apache.commons.math3.stat.StatUtils;
+import org.apache.commons.pool2.impl.CallStackUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.slf4j.event.SubstituteLoggingEvent;
 import org.stagemonitor.configuration.ConfigurationRegistry;
 
+import javax.annotation.Nullable;
+import java.lang.ref.WeakReference;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicInteger;
 
+import static net.bytebuddy.matcher.ElementMatchers.any;
+import static net.bytebuddy.matcher.ElementMatchers.isConstructor;
+import static net.bytebuddy.matcher.ElementMatchers.named;
+import static net.bytebuddy.matcher.ElementMatchers.none;
+import static net.bytebuddy.matcher.ElementMatchers.takesArguments;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.Mockito.when;
+import static org.awaitility.Awaitility.await;
+import static org.mockito.Mockito.doReturn;
 
 class InstrumentationTest {
 
     private ElasticApmTracer tracer;
     private ConfigurationRegistry configurationRegistry;
     private CoreConfiguration coreConfig;
+    private String privateString;
 
     @BeforeEach
     void setup() {
-        tracer = MockTracer.create();
         configurationRegistry = SpyConfiguration.createSpyConfig();
         coreConfig = configurationRegistry.getConfig(CoreConfiguration.class);
+        tracer = MockTracer.create(configurationRegistry);
     }
 
     @AfterEach
@@ -75,9 +97,56 @@ class InstrumentationTest {
     }
 
     @Test
+    void testFieldAccess() {
+        init(configurationRegistry, List.of(new FieldAccessInstrumentation()));
+        assignToField("@AssignToField");
+        assertThat(privateString).isEqualTo("@AssignToField");
+    }
+
+    @Test
+    void testFieldAccessArray() {
+        init(configurationRegistry, List.of(new FieldAccessArrayInstrumentation()));
+        assignToField("@AssignToField");
+        assertThat(privateString).isEqualTo("@AssignToField");
+    }
+
+    public void assignToField(String s) {
+    }
+
+    @Test
+    void testAssignToArgument() {
+        init(configurationRegistry, List.of(new AssignToArgumentInstrumentation()));
+        assertThat(assignToArgument("foo")).isEqualTo("foo@AssignToArgument");
+    }
+
+    public String assignToArgument(String s) {
+        return s;
+    }
+
+    @Test
+    void testAssignToArgumentArray() {
+        init(configurationRegistry, List.of(new AssignToArgumentsInstrumentation()));
+        assertThat(assignToArguments("foo", "bar")).isEqualTo("barfoo");
+    }
+
+    public String assignToArguments(String foo, String bar) {
+        return foo + bar;
+    }
+
+    @Test
+    void testAssignToReturnArray() {
+        init(configurationRegistry, List.of(new AssignToReturnArrayInstrumentation()));
+        assertThat(assignToReturn("foo", "bar")).isEqualTo("foobar");
+    }
+
+    @Nullable
+    public String assignToReturn(String foo, String bar) {
+        return null;
+    }
+
+    @Test
     void testDisabled() {
-        when(coreConfig.getDisabledInstrumentations()).
-            thenReturn(Collections.singletonList("test"));
+        doReturn(Collections.singletonList("test")).when(coreConfig).getDisabledInstrumentations();
         init(configurationRegistry, List.of(new TestInstrumentation()));
         assertThat(interceptMe()).isEmpty();
     }
@@ -92,12 +161,12 @@ class InstrumentationTest {
 
     @Test
     void testReInitEnableOneInstrumentation() {
-        when(coreConfig.getDisabledInstrumentations()).thenReturn(Collections.singletonList("test"));
+        doReturn(Collections.singletonList("test")).when(coreConfig).getDisabledInstrumentations();
         init(configurationRegistry, List.of(new TestInstrumentation()));
         assertThat(interceptMe()).isEmpty();
 
-        when(coreConfig.getDisabledInstrumentations()).thenReturn(List.of());
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        doReturn(List.of()).when(coreConfig).getDisabledInstrumentations();
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEqualTo("intercepted");
     }
 
@@ -106,45 +175,44 @@ class InstrumentationTest {
         init(configurationRegistry, List.of(new TestInstrumentation()));
         assertThat(interceptMe()).isEqualTo("intercepted");
 
-        when(coreConfig.getDisabledInstrumentations())
-            .thenReturn(Collections.singletonList("experimental"));
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        doReturn(Collections.singletonList("experimental")).when(coreConfig).getDisabledInstrumentations();
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEmpty();
     }
 
     @Test
     void testExcludedClassesFromInstrumentation() {
-        when(coreConfig.getClassesExcludedFromInstrumentation())
-            .thenReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.InstrumentationTest")));
+        doReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.InstrumentationTest")))
+            .when(coreConfig).getClassesExcludedFromInstrumentation();
         init(configurationRegistry, List.of(new TestInstrumentation()));
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEmpty();
     }
 
     @Test
     void testExcludedPackageFromInstrumentation() {
-        when(coreConfig.getClassesExcludedFromInstrumentation())
-            .thenReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.*")));
+        doReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.*")))
+            .when(coreConfig).getClassesExcludedFromInstrumentation();
         init(configurationRegistry, List.of(new TestInstrumentation()));
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEmpty();
     }
 
     @Test
     void testExcludedDefaultClassesFromInstrumentation() {
-        when(coreConfig.getDefaultClassesExcludedFromInstrumentation())
-            .thenReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.InstrumentationTest")));
+        doReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.InstrumentationTest")))
+            .when(coreConfig).getDefaultClassesExcludedFromInstrumentation();
         init(configurationRegistry, List.of(new TestInstrumentation()));
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEmpty();
     }
 
     @Test
     void testExcludedDefaultPackageFromInstrumentation() {
-        when(coreConfig.getDefaultClassesExcludedFromInstrumentation())
-            .thenReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.*")));
+        doReturn(List.of(WildcardMatcher.valueOf("co.elastic.apm.agent.bci.*")))
+            .when(coreConfig).getDefaultClassesExcludedFromInstrumentation();
         init(configurationRegistry, List.of(new TestInstrumentation()));
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEmpty();
     }
 
@@ -153,9 +221,8 @@ class InstrumentationTest {
         init(configurationRegistry, List.of(new TestInstrumentation()));
         assertThat(interceptMe()).isEqualTo("intercepted");
 
-        when(coreConfig.getDisabledInstrumentations())
-            .thenReturn(Collections.singletonList("incubating"));
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        doReturn(Collections.singletonList("incubating")).when(coreConfig).getDisabledInstrumentations();
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEmpty();
     }
 
@@ -164,8 +231,8 @@ class InstrumentationTest {
         init(configurationRegistry, List.of(new TestInstrumentation()));
         assertThat(interceptMe()).isEqualTo("intercepted");
 
-        when(coreConfig.isInstrument()).thenReturn(false);
-        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        doReturn(false).when(coreConfig).isInstrument();
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()), tracer);
         assertThat(interceptMe()).isEmpty();
     }
 
@@ -212,12 +279,187 @@ class InstrumentationTest {
         throw null;
     }
 
-    private void init(ConfigurationRegistry config, List<ElasticApmInstrumentation> instrumentations) {
-        ElasticApmAgent.initInstrumentation(new ElasticApmTracerBuilder()
-                .configurationRegistry(config)
-                .build(),
+    @Test
+    void testPatchClassFileVersionJava6ToJava7() {
+        // loading classes compiled with bytecode level 50 (Java 6)
+        assertThat(StringUtils.startsWithIgnoreCase("APM", "apm")).isTrue();
+
+        // retransforming classes and patch to bytecode level 51 (Java 7)
+        ElasticApmAgent.initInstrumentation(tracer,
             ByteBuddyAgent.install(),
-            instrumentations);
+            Collections.singletonList(new CommonsLangInstrumentation()));
+
+        assertThat(CommonsLangInstrumentation.enterCount).hasValue(0);
+        assertThat(CommonsLangInstrumentation.exitCount).hasValue(0);
+
+        assertThat(StringUtils.startsWithIgnoreCase("APM", "apm")).isTrue();
+
+        assertThat(CommonsLangInstrumentation.enterCount).hasPositiveValue();
+        assertThat(CommonsLangInstrumentation.exitCount).hasPositiveValue();
+    }
+
+    @Test
+    void testPatchClassFileVersionJava5ToJava7() {
+        // loading classes compiled with bytecode level 49 (Java 6)
+        new org.slf4j.event.SubstituteLoggingEvent();
+
+        // retransforming classes and patch to bytecode level 51 (Java 7)
+        ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new LoggerFactoryInstrumentation()));
+
+        assertThat(LoggerFactoryInstrumentation.enterCount).hasValue(0);
+        assertThat(LoggerFactoryInstrumentation.exitCount).hasValue(0);
+
+        new org.slf4j.event.SubstituteLoggingEvent();
+
+        assertThat(LoggerFactoryInstrumentation.enterCount).hasPositiveValue();
+        assertThat(LoggerFactoryInstrumentation.exitCount).hasPositiveValue();
+    }
+
+    @Test
+    void testPatchClassFileVersionJava5ToJava7CommonsMath() {
+        org.apache.commons.math3.stat.StatUtils.max(new double[]{3.14});
+
+        // retransforming classes and patch to bytecode level 51 (Java 7)
+        ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new StatUtilsInstrumentation()));
+
+        assertThat(StatUtilsInstrumentation.enterCount).hasValue(0);
+        assertThat(StatUtilsInstrumentation.exitCount).hasValue(0);
+
+        org.apache.commons.math3.stat.StatUtils.max(new double[]{3.14});
+
+        assertThat(StatUtilsInstrumentation.enterCount).hasPositiveValue();
+        assertThat(StatUtilsInstrumentation.exitCount).hasPositiveValue();
+    }
+
+    @Test
+    void testPrivateConstructorJava7() {
+        org.apache.commons.pool2.impl.CallStackUtils.newCallStack("", false, false);
+
+        // retransforming classes and patch to bytecode level 51 (Java 7)
+        ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new CallStackUtilsInstrumentation()));
+
+        assertThat(CallStackUtilsInstrumentation.enterCount).hasValue(0);
+        assertThat(CallStackUtilsInstrumentation.exitCount).hasValue(0);
+
+        org.apache.commons.pool2.impl.CallStackUtils.newCallStack("", false, false);
+
+        assertThat(CallStackUtilsInstrumentation.enterCount).hasPositiveValue();
+        assertThat(CallStackUtilsInstrumentation.exitCount).hasPositiveValue();
+    }
+
+    @Test
+    void testPluginClassLoaderGCdAfterUndoingInstrumentation() {
+        ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new ClassLoadingTestInstrumentation()));
+
+        WeakReference<ClassLoader> pluginClassLoader = new WeakReference<>(getPluginClassLoader());
+        assertThat(pluginClassLoader.get()).isNotNull();
+        assertThat(pluginClassLoader.get()).isInstanceOf(ByteArrayClassLoader.ChildFirst.class);
+
+        ElasticApmAgent.reset();
+        assertThat(getPluginClassLoader()).isNull();
+
+        System.gc();
+        System.gc();
+        await().untilAsserted(() -> assertThat(pluginClassLoader.get()).isNull());
+    }
+
+    @Test
+    void testNoClassLoaderLeakWhenInstrumentedApplicationIsUndeployed() throws Exception {
+        ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new GetClassLoaderInstrumentation()));
+
+        Map<String, byte[]> typeDefinitions = Map.of(
+            InstrumentedInIsolatedClassLoader.class.getName(),
+            ClassFileLocator.ForClassLoader.of(ClassLoader.getSystemClassLoader()).locate(InstrumentedInIsolatedClassLoader.class.getName()).resolve()
+        );
+        ClassLoader applicationCL = new ByteArrayClassLoader.ChildFirst(null, true, typeDefinitions, ByteArrayClassLoader.PersistenceHandler.MANIFEST);
+        Class<?> instrumentedClass = applicationCL.loadClass(InstrumentedInIsolatedClassLoader.class.getName());
+        assertThat(instrumentedClass.getMethod("getClassLoader").invoke(null)).isSameAs(applicationCL);
+
+        WeakReference<ClassLoader> applicationCLRef = new WeakReference<>(applicationCL);
+        // after clearing these references, the application class loader is expected to be eligible for GC
+        // the agent must not hold strong references the instrumented class or it's class loader
+        applicationCL = null;
+        instrumentedClass = null;
+
+        System.gc();
+        System.gc();
+        await().untilAsserted(() -> assertThat(applicationCLRef.get()).isNull());
+    }
+
+    public static class InstrumentedInIsolatedClassLoader {
+
+        @Nullable
+        public static ClassLoader getClassLoader() {
+            return null;
+        }
+
+    }
+
+    @Test
+    void testInlinedIndyAdvice() {
+        assertThatThrownBy(() -> ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new InlinedIndyAdviceInstrumentation())))
+            .isInstanceOf(IllegalStateException.class);
+    }
+
+    @Test
+    void testAdviceInSubpackage() {
+        assertThatThrownBy(() -> ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new AdviceInSubpackageInstrumentation())))
+            .isInstanceOf(IllegalStateException.class);
+    }
+
+    @Test
+    void testAdviceWithAgentReturnType() {
+        assertThatThrownBy(() -> ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new AgentTypeReturnInstrumentation())))
+            .isInstanceOf(IllegalStateException.class);
+    }
+
+    @Test
+    void testAdviceWithAgentParameterType() {
+        assertThatThrownBy(() -> ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new AgentTypeParameterInstrumentation())))
+            .isInstanceOf(IllegalStateException.class);
+    }
+
+    @Test
+    void testAdviceUsingThreadLocal() {
+        ElasticApmAgent.initInstrumentation(tracer,
+            ByteBuddyAgent.install(),
+            Collections.singletonList(new UsingThreadLocal()));
+        assertThat(getSpanFromThreadLocal()).isNull();
+    }
+
+    @Nullable
+    public AbstractSpan<?> getSpanFromThreadLocal() {
+        return null;
+    }
+
+    @Nullable
+    public ClassLoader getPluginClassLoader() {
+        return null;
+    }
+
+    private void init(ConfigurationRegistry config, List<ElasticApmInstrumentation> instrumentations) {
+        ElasticApmTracer tracer = new ElasticApmTracerBuilder()
+            .configurationRegistry(config)
+            .build();
+        ElasticApmAgent.initInstrumentation(tracer, ByteBuddyAgent.install(), instrumentations);
     }
 
     private String interceptMe() {
@@ -225,19 +467,20 @@ class InstrumentationTest {
     }
 
     public static class TestInstrumentation extends ElasticApmInstrumentation {
+        @AssignTo.Return
         @Advice.OnMethodExit
-        public static void onMethodExit(@Advice.Return(readOnly = false) String returnValue) {
-            returnValue = "intercepted";
+        public static String onMethodExit() {
+            return "intercepted";
         }
 
         @Override
         public ElementMatcher<? super TypeDescription> getTypeMatcher() {
-            return ElementMatchers.named("co.elastic.apm.agent.bci.InstrumentationTest");
+            return named("co.elastic.apm.agent.bci.InstrumentationTest");
         }
 
         @Override
         public ElementMatcher<? super MethodDescription> getMethodMatcher() {
-            return ElementMatchers.named("interceptMe");
+            return named("interceptMe");
         }
 
         @Override
@@ -247,19 +490,20 @@ class InstrumentationTest {
     }
 
     public static class MathInstrumentation extends ElasticApmInstrumentation {
-        @Advice.OnMethodExit
-        public static void onMethodExit(@Advice.Return(readOnly = false) int returnValue) {
-            returnValue = 42;
+        @AssignTo.Return
+        @Advice.OnMethodExit(inline = false)
+        public static int onMethodExit() {
+            return 42;
         }
 
         @Override
         public ElementMatcher<? super TypeDescription> getTypeMatcher() {
-            return ElementMatchers.named("org.apache.commons.math.util.MathUtils");
+            return named("org.apache.commons.math.util.MathUtils");
         }
 
         @Override
         public ElementMatcher<? super MethodDescription> getMethodMatcher() {
-            return ElementMatchers.named("sign").and(ElementMatchers.takesArguments(int.class));
+            return named("sign").and(takesArguments(int.class));
         }
 
         @Override
@@ -276,7 +520,7 @@ class InstrumentationTest {
 
         @Override
         public ElementMatcher<? super TypeDescription> getTypeMatcher() {
-            return ElementMatchers.named(InstrumentationTest.class.getName());
+            return named(InstrumentationTest.class.getName());
         }
 
         @Override
@@ -292,28 +536,477 @@ class InstrumentationTest {
 
     public static class SuppressExceptionInstrumentation extends ElasticApmInstrumentation {
         @Advice.OnMethodEnter(suppress = Throwable.class)
-        public static void onMethodEnter() {
+        public static String onMethodEnter() {
             throw new RuntimeException("This exception should be suppressed");
         }
 
+        @AssignTo.Return
         @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class)
-        public static void onMethodExit(@Advice.Thrown Throwable throwable) {
+        public static String onMethodExit(@Advice.Thrown Throwable throwable) {
             throw new RuntimeException("This exception should be suppressed");
         }
 
         @Override
         public ElementMatcher<? super TypeDescription> getTypeMatcher() {
-            return ElementMatchers.named(InstrumentationTest.class.getName());
+            return named(InstrumentationTest.class.getName());
         }
 
         @Override
         public ElementMatcher<? super MethodDescription> getMethodMatcher() {
-            return ElementMatchers.named("noExceptionPlease");
+            return named("noExceptionPlease");
         }
 
         @Override
         public Collection<String> getInstrumentationGroupNames() {
             return Collections.emptyList();
+        }
+    }
+
+    public static class FieldAccessInstrumentation extends ElasticApmInstrumentation {
+
+        @AssignTo.Field("privateString")
+        @Advice.OnMethodEnter
+        public static String onEnter(@Advice.Argument(0) String s) {
+            return s;
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named("co.elastic.apm.agent.bci.InstrumentationTest");
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("assignToField");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return List.of("test", "experimental");
+        }
+    }
+
+    public static class FieldAccessArrayInstrumentation extends ElasticApmInstrumentation {
+
+        @AssignTo(fields = @AssignTo.Field(index = 0, value = "privateString"))
+        @Advice.OnMethodEnter
+        public static Object[] onEnter(@Advice.Argument(0) String s) {
+            return new Object[]{s};
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named("co.elastic.apm.agent.bci.InstrumentationTest");
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("assignToField");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return List.of("test", "experimental");
+        }
+    }
+
+    public static class AssignToArgumentInstrumentation extends ElasticApmInstrumentation {
+
+        @AssignTo.Argument(0)
+        @Advice.OnMethodEnter
+        public static String onEnter(@Advice.Argument(0) String s) {
+            return s + "@AssignToArgument";
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named("co.elastic.apm.agent.bci.InstrumentationTest");
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("assignToArgument");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return List.of("test", "experimental");
+        }
+    }
+
+    public static class AssignToArgumentsInstrumentation extends ElasticApmInstrumentation {
+
+        @AssignTo(arguments = {
+            @AssignTo.Argument(index = 0, value = 1),
+            @AssignTo.Argument(index = 1, value = 0)
+        })
+        @Advice.OnMethodEnter(inline = false)
+        public static Object[] onEnter(@Advice.Argument(0) String foo, @Advice.Argument(1) String bar) {
+            return new Object[]{foo, bar};
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named("co.elastic.apm.agent.bci.InstrumentationTest");
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("assignToArguments");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return List.of("test", "experimental");
+        }
+    }
+
+    public static class AssignToReturnArrayInstrumentation extends ElasticApmInstrumentation {
+
+        @AssignTo(returns = @AssignTo.Return(index = 0))
+        @Advice.OnMethodExit(inline = false)
+        public static Object[] onEnter(@Advice.Argument(0) String foo, @Advice.Argument(1) String bar) {
+            return new Object[]{foo + bar};
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named("co.elastic.apm.agent.bci.InstrumentationTest");
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("assignToReturn");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return List.of("test", "experimental");
+        }
+    }
+
+    public static class CommonsLangInstrumentation extends ElasticApmInstrumentation {
+
+        public static AtomicInteger enterCount = GlobalVariables.get(CommonsLangInstrumentation.class, "enterCount", new AtomicInteger());
+        public static AtomicInteger exitCount = GlobalVariables.get(CommonsLangInstrumentation.class, "exitCount", new AtomicInteger());
+
+        @Advice.OnMethodEnter(inline = false)
+        public static void onEnter() {
+            enterCount.incrementAndGet();
+        }
+
+        @Advice.OnMethodExit(inline = false)
+        public static void onExit() {
+            exitCount.incrementAndGet();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return ElementMatchers.nameStartsWith(StringUtils.class.getPackageName());
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return any();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class LoggerFactoryInstrumentation extends ElasticApmInstrumentation {
+
+        public static AtomicInteger enterCount = GlobalVariables.get(LoggerFactoryInstrumentation.class, "enterCount", new AtomicInteger());
+        public static AtomicInteger exitCount = GlobalVariables.get(LoggerFactoryInstrumentation.class, "exitCount", new AtomicInteger());
+
+        @Advice.OnMethodEnter(inline = false)
+        public static void onEnter() {
+            enterCount.incrementAndGet();
+        }
+
+        @Advice.OnMethodExit(inline = false)
+        public static void onExit() {
+            exitCount.incrementAndGet();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named(SubstituteLoggingEvent.class.getName());
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return isConstructor();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class StatUtilsInstrumentation extends ElasticApmInstrumentation {
+
+        public static AtomicInteger enterCount = GlobalVariables.get(StatUtilsInstrumentation.class, "enterCount", new AtomicInteger());
+        public static AtomicInteger exitCount = GlobalVariables.get(StatUtilsInstrumentation.class, "exitCount", new AtomicInteger());
+
+        @Advice.OnMethodEnter(inline = false)
+        public static void onEnter() {
+            enterCount.incrementAndGet();
+        }
+
+        @Advice.OnMethodExit(inline = false)
+        public static void onExit() {
+            exitCount.incrementAndGet();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named(StatUtils.class.getName());
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return any();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class CallStackUtilsInstrumentation extends ElasticApmInstrumentation {
+
+        public static AtomicInteger enterCount = GlobalVariables.get(CallStackUtilsInstrumentation.class, "enterCount", new AtomicInteger());
+        public static AtomicInteger exitCount = GlobalVariables.get(CallStackUtilsInstrumentation.class, "exitCount", new AtomicInteger());
+
+        @Advice.OnMethodEnter(inline = false)
+        public static void onEnter() {
+            enterCount.incrementAndGet();
+        }
+
+        @Advice.OnMethodExit(inline = false)
+        public static void onExit() {
+            exitCount.incrementAndGet();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named(CallStackUtils.class.getName());
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return any();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class ClassLoadingTestInstrumentation extends ElasticApmInstrumentation {
+
+        @AssignTo.Return
+        @Advice.OnMethodExit(inline = false)
+        public static ClassLoader onExit() {
+            return ClassLoadingTestInstrumentation.class.getClassLoader();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named("co.elastic.apm.agent.bci.InstrumentationTest");
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("getPluginClassLoader");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class InlinedIndyAdviceInstrumentation extends ElasticApmInstrumentation {
+
+        @Advice.OnMethodEnter
+        public static void onExit() {
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return none();
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return none();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class AgentTypeReturnInstrumentation extends ElasticApmInstrumentation {
+
+        @Advice.OnMethodEnter(inline = false)
+        public static Span onEnter() {
+            return null;
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return none();
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return none();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class AgentTypeParameterInstrumentation extends ElasticApmInstrumentation {
+
+        @Advice.OnMethodEnter(inline = false)
+        public static Object onEnter() {
+            return null;
+        }
+
+        @Advice.OnMethodExit(inline = false)
+        private static void onExit(@Advice.Enter Span span) {
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return none();
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return none();
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class UsingThreadLocal extends TracerAwareInstrumentation {
+
+        private static final ThreadLocal<AbstractSpan<?>> localSpan = new ThreadLocal<>() {
+            @Override
+            @Nullable
+            protected AbstractSpan<?> initialValue() {
+                return tracer.startRootTransaction(null);
+            }
+        };
+
+        @Advice.OnMethodEnter(inline = false)
+        public static void onEnter() {
+            localSpan.get();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named(InstrumentationTest.class.getName());
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("getSpanFromThreadLocal");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
+        }
+    }
+
+    public static class GetClassLoaderInstrumentation extends ElasticApmInstrumentation {
+
+        @AssignTo.Return
+        @Advice.OnMethodExit(inline = false)
+        public static ClassLoader onExit(@Advice.Origin Class<?> clazz) {
+            return clazz.getClassLoader();
+        }
+
+        @Override
+        public ElementMatcher<? super TypeDescription> getTypeMatcher() {
+            return named(InstrumentedInIsolatedClassLoader.class.getName());
+        }
+
+        @Override
+        public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+            return named("getClassLoader");
+        }
+
+        @Override
+        public Collection<String> getInstrumentationGroupNames() {
+            return Collections.singletonList("test");
+        }
+
+        @Override
+        public boolean indyPlugin() {
+            return true;
         }
     }
 }
